--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.6",
+    "react-icons": "^4.3.1",
     "tailwindcss": "^3.0.18"
   }
 }
