--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "styled-components": "^4.3.2",
+    "sweetalert2": "^11.4.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
